changed photo collection from flickr api to mongodb

--- a/server.html
+++ b/server.html
@@ -11,8 +11,15 @@
     <h1>Welcome to the DL Imaging API</h1>
     <h2>Endpoints</h2>
     <ul>
-      <li><h3>/images/</h3></li>
-      <li><h3>/images/{id}/</h3></li>
+      <li>
+        <h3>
+          <a href="/images">/images</a>: GET all images, POST a new image,
+          DELETE one or all images
+        </h3>
+      </li>
+      <li>
+        <h3>/images/:id: GET image by id</h3>
+      </li>
     </ul>
   </body>
 </html>
