fixing heroku server attempt

--- a/server.html
+++ b/server.html
@@ -13,7 +13,7 @@
     <ul>
       <li>
         <h3>
-          <a href="/images">/images</a>: GET all images, POST a new image,
+          <a href="/api/images">/images</a>: GET all images, POST a new image,
           DELETE one or all images
         </h3>
       </li>
